--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Navigation Component</string>
+    <string name="home_screen">Home Screen</string>
+    <string name="login">Login</string>
 </resources>
