--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,13 @@
 <resources>
     <string name="app_name">Navigation Component</string>
     <string name="home_screen">Home Screen</string>
+    <string name="home">Home</string>
     <string name="login">Login</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="confirm">Confirm</string>
     <string name="successfully_logged_in">Successfully logged in!</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
+    <string name="settings">Settings</string>
+    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
 </resources>
