--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ok">OK</string>
     <string name="settings">Settings</string>
     <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
+    <string name="search">Search</string>
 </resources>
